--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Ben Jarrett<br />
 						Portfolio</h1>
-						<p>Data Scientist | Problem Solver | Experience in SQL, Python, Tableau.<br />  With a background in biomedical engineering I apply a multidisciplinary approach to problem solving.</p>
+						<p>Experience in SQL, Python, Tableau.<br />  Scientist | Engineer | Data | Research |</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
