--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Ben Jarrett<br />
 						Portfolio</h1>
-						<p>Experience in SQL, Python, Tableau.<br />  Scientist | Engineer | Data | Research |</p>
+						<p>Experience in SQL, Python, Tableau.<br />  Scientist | Engineer | Entry Level Data Analyst |</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -89,7 +89,7 @@
 										Projects</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/ben4877" target="_blank" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-									<p>Visualization of global covid-19 data from Data Exploration in SQL can be seen in "Covid Dashboard".  Further analysis on the covid-19 data exploration can be seen in "Covid Death Correlation Dashboard."</p>
+									<p>Visualization of global air pollution data for trend analysis project can be seen in "AirPollutionDashboard".  Visualization of global covid-19 data from Data Exploration in SQL can be seen in "Covid Dashboard".  Further analysis on the covid-19 data exploration can be seen in "Covid Death Correlation Dashboard."</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/ben4877"  target="_blank" class="button">View Projects</a></li>
 									</ul>
